firefox drver commit

--- a/data.properties
+++ b/data.properties
@@ -6,3 +6,10 @@ passwordinc=dossani
 errmessage= Warning: No match for E-Mail Address and/or Password.
 username1=arbaazdossani@gmail.com
 password1=dossani123
+everyplateurl=https://www.everyplate.com/
+url1=https://phptravels.com/demo/
+fname=Alia
+lname=Dossani
+email=rahatalpradnya@gmail.com
+phonenum=7021655382
+flagcode=India
